--- a/arch/municourt/updateCollectionPay/index.html
+++ b/arch/municourt/updateCollectionPay/index.html
@@ -36,10 +36,11 @@
 <span style="font-weight: bold;">Update Collection Pay<br />Use Case Model</span>
 </td></tr></table>
 
-<p><b>Scope: </b>When the collections service takes a payment from the Defendant it records the payment and sends a record to the case management 
-system that includes the payment amount, payment date, payment type, next payment due date and an extension to pay date (when applicable). If the 
-collections service determines through their contact with the Defendant that they have a new mail email address, emial address or phone number 
-then they set a flag indicating that the contact information has changed and include the corrected contact info in the file they send to Muni Court.
+<p><b>Scope: </b>When the collections service takes a payment from the Defendant it records the payment and sends a record to the 
+	case management system that includes the payment amount, payment date, payment type. If the collections service determines 
+	through their contact with the Defendant that they have a new mail address, email address or phone number then they set a 
+	flag indicating that the contact information has changed and include the corrected contact info in the file they send to 
+	Muni Court.
 </p>
 <!-- IF INTERACTION OVERVIEW IS INCLUDED 
 <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
