--- a/arch/municourt/reverseCollectionPayment/index.html
+++ b/arch/municourt/reverseCollectionPayment/index.html
@@ -81,7 +81,7 @@ If the Defendant pays at Court:
 After a case has been sent to collections, when the Defendant makes a payment on the case at the Court, a record is sent to the 
 collections system indicating that payment has been made and including the payment amount, payment date and case balance. 
 <br>&nbsp;<br>
-However, if the transaction type is a layout, community service or a judicial order then only the case balance (balance adjustment) 
+However, if the transaction type is non-monetary (jail credit, community service or a judicial waiver) then only the case balance (balance adjustment) 
 is sent to the collections system. If the transaction type is BO (bond) then the case management system checks first to see if the bond 
 is applied before or after the case has been sent to collections.  If the bond was posted before, the collections vendor does not get credit 
 and only a case balance adjustment is sent to the collections system. If the bond was posted after the case was sent, then the case management 
