--- a/arch/municourt/modifyCaseCollectionBalance/index.html
+++ b/arch/municourt/modifyCaseCollectionBalance/index.html
@@ -74,7 +74,7 @@ When these adjustments take place a balance adjustment record is sent to the col
 </tr>
 <tr>
 <td>
-If the Judge adjusts the fine on the case: The Judge changes the fine amount on the case. The case management system records the new file amount on the case.
+If the Judge adjusts the fine on the case: The Judge changes the fine amount on the case. The case management system records the new fine amount on the case.
 </td>
 </tr>
 <tr>
@@ -84,7 +84,7 @@ If the Judge adjusts the fine on the case: The Judge changes the fine amount on 
 </tr>
 <tr>
 <td>
-If the case management system adds fees and costs to the case: <br>
+If the case management system adds/changes fees and costs to the case: <br>
 As cost and fees change, the case management can automatically add those to a case.
 <br>
 If the "Time Payment Fee" is not on the case, The case management system adds it and verifies that the case total = the case Judgment amount + time payment fee + 
