--- a/arch/municourt/pauseCollectionsOnCase/index.html
+++ b/arch/municourt/pauseCollectionsOnCase/index.html
@@ -133,7 +133,7 @@ The case management system sets the date on the docket calendar when the Defenda
 </tr>
 <tr>
 <td rowspan="2">007</td>
-<td style="font-weight: bold; background: lightgray;">Manage Court Case/setCaseOnDocket</td>
+<td style="font-weight: bold; background: lightgray;">Manage Court Case/addCollectionPause</td>
 <td rowspan="2">  </td>
 </tr>
 <tr>
