--- a/arch/municourt/pauseCollectionsOnCase/index.html
+++ b/arch/municourt/pauseCollectionsOnCase/index.html
@@ -145,7 +145,7 @@ the appeal pause is lifted. Under other pause conditions the vendor ceases colle
 <br>&nbsp;<br>
 Pause Codes:
 <ul>
-<li>?? = Pause Appeal</li>
+<li>APPEAL = Pause Appeal</li>
 </ul>
 </td>
 </tr>
