--- a/arch/municourt/addCaseToCollections/index.html
+++ b/arch/municourt/addCaseToCollections/index.html
@@ -56,7 +56,7 @@ finalized or in SV (sold vehicle) status. (TR, CM or SB) case types.</li>
 <li>Check for Bond. If bond is posted before collection do not send, otherwise, send only after bond has been applied.</li>
 </ul>
 <br>
-<h2>Selection criteria for all all parking cases:</h2>
+<h2>Selection criteria for all parking cases:</h2>
 <ul>
 <li>All parking or Boot Tow cases (PK or BT) case types.</li>
 <li>Plea is automatic on case.</li>
