--- a/arch/municourt/addCaseToCollections/index.html
+++ b/arch/municourt/addCaseToCollections/index.html
@@ -76,9 +76,7 @@ finalized or in SV (sold vehicle) status. (TR, CM or SB) case types.</li>
 	<li><a href="/austinea/arch/municourt/sendMessageToCollections/index.html">Send Message To Collections Use Case</a></li>
 </ul>
 <br>
-<ul>
-	<li><a href="/austinea/arch/municourt/manageCollectionsIO/index.html">Manage Collections Interaction Overview</a></li>
-</ul>
+<center><a href="/austinea/arch/municourt/manageCollectionsIO/index.html">Manage Collections Interaction Overview</a></center>
 <!-- SEQUENCE DIAGRAM -->
 <table style="border-collapse: collapse;" align="center" border="0" cellpadding="5" cellspacing="0"><tbody><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br>
