--- a/arch/municourt/addCaseToCollections/index.html
+++ b/arch/municourt/addCaseToCollections/index.html
@@ -75,8 +75,6 @@ finalized or in SV (sold vehicle) status. (TR, CM or SB) case types.</li>
 <ul>
 	<li><a href="/austinea/arch/municourt/sendMessageToCollections/index.html">Send Message To Collections Use Case</a></li>
 </ul>
-<br>
-<center><a href="/austinea/arch/municourt/manageCollectionsIO/index.html">Manage Collections Interaction Overview</a></center>
 <!-- SEQUENCE DIAGRAM -->
 <table style="border-collapse: collapse;" align="center" border="0" cellpadding="5" cellspacing="0"><tbody><tr><td align="center">
 <span class="lbl">Select to enlarge...</span><br>
@@ -174,5 +172,8 @@ to what they have on record. Any changes detected are used to add or update thei
 </tr>
 </tbody></table>
 <br>
+</table>
 </td></tr></tbody></table>
-</td></tr></tbody></table></body></html>
+<br>
+<center><a href="/austinea/arch/municourt/manageCollectionsIO/index.html">Manage Collections Interaction Overview</a></center>
+</body></html>
