--- a/arch/municourt/changeCaseStatus/index.html
+++ b/arch/municourt/changeCaseStatus/index.html
@@ -156,6 +156,7 @@ to what they have on record. Any changes detected are used to add or update thei
 </td>
 </tr>
 </table>
-<br/>
+<br>
+<center><a href="/austinea/arch/municourt/manageCollectionsIO/index.html">Manage Collections Interaction Overview</a></center>
 </td></tr></table>
 </td></tr></table></body></html>
