--- a/arch/municourt/sendMessageToCollections/index.html
+++ b/arch/municourt/sendMessageToCollections/index.html
@@ -182,8 +182,7 @@ the case number) to create the action record.
 </td>
 </tr>
 </table>
-
-<br/>
-
+<br>
+<center><a href="/austinea/arch/municourt/manageCollectionsIO/index.html">Manage Collections Interaction Overview</a></center>
 </td></tr></table>
 </td></tr></table></body></html>
