--- a/arch/municourt/withdrawCaseFromCollections/index.html
+++ b/arch/municourt/withdrawCaseFromCollections/index.html
@@ -245,6 +245,7 @@ If a DSC completion paperwork is being submitted the action reflects the sentenc
 </td>
 </tr>
 </table>
-<br/>
+<br>
+<center><a href="/austinea/arch/municourt/manageCollectionsIO/index.html">Manage Collections Interaction Overview</a></center>
 </td></tr></table>
-</td></tr></table></body></html>
+</body></html>
