--- a/arch/municourt/uploadDialerNotices/index.html
+++ b/arch/municourt/uploadDialerNotices/index.html
@@ -328,6 +328,7 @@ answered by modem' action and saves it for the generation of a return file that 
 </td>
 </tr>
 </table>
-<br/>
-</td></tr></table>
+<br>
+<center><a href="/austinea/arch/municourt/manageDialerNoticesIO/index.html">Manage Dialer Notices Ineraction Overview</a></center>
+</tr></table>
 </td></tr></table></body></html>
