--- a/arch/municourt/processDialerResults/index.html
+++ b/arch/municourt/processDialerResults/index.html
@@ -290,5 +290,6 @@ If the action records a missed trial then the action codes include: JTRI, BTRI
 </tr>
 </table>
 <br/>
+<center><a href="/austinea/arch/municourt/manageDialerNoticesIO/index.html">Manage Dialer Notices Ineraction Overview</a></center>
 </td></tr></table>
 </td></tr></table></body></html>
