--- a/arch/municourt/addCaseToCollections/index.html
+++ b/arch/municourt/addCaseToCollections/index.html
@@ -63,6 +63,7 @@ finalized or in SV (sold vehicle) status. (TR, CM or SB) case types.</li>
 <li>Case must be 6 mos. old </li>
 <li>The Case Scheduled Event/Action/Task date must be 40 or more days old.</li>
 <li>If case has no PID check the REO party type for name &amp; address.</li>
+<li>If state is in AZ, HI, MA or CT = do not send.</li>
 </ul>
 <p></p>
 <!-- IF INTERACTION OVERVIEW IS INCLUDED <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse;" align="center"><tr><td align="center">
