--- a/arch/municourt/verifyJailCredit/index.html
+++ b/arch/municourt/verifyJailCredit/index.html
@@ -212,7 +212,7 @@ generated to be added to the case.
 </tr>
 <tr>
 <td>
-an action is applied to the case:  Jail Credit Verification activity the action codes include:
+An action is applied to the case:  Jail Credit Verification activity the action codes include:
 <ul>
 <li>JCASORD - Jail Case Order Form</li>
 <li>JRTN - Jail Case Order Form - Return</li>
