--- a/arch/municourt/verifyJailCredit/index.html
+++ b/arch/municourt/verifyJailCredit/index.html
@@ -116,6 +116,7 @@ The Defendant completes the Jail Credit Verification form and submits it to the 
 </tr>
 <tr>
 <td>
+If the Defendant is in custody:<br>&nbsp;<br>
 The incarcerated Defendant requests a Jail Credit form from the Court (Collections or Communications units). 
 The request is submitted to the Court by either the Defendant's representative or by the Jail Custodian.
 </td>
