--- a/arch/municourt/verifyJailCredit/index.html
+++ b/arch/municourt/verifyJailCredit/index.html
@@ -37,7 +37,7 @@
 </td></tr></table>
 
 <p><b>Scope: </b>Jail Credit Verifications requests can be initiated by defendants who are in custody (incarcerated) or by 
-	defendants not (Walk-In). In either case they obtain a Jail Credit Verification form from the Court. Incarcerated 
+	defendants not in custody (Walk-In). In either case they obtain a Jail Credit Verification form from the Court. Incarcerated 
 	Defendants may request the form via the Web and Walk-In Defendants can obtain the form over the Web or by contacting 
 	the Court and arranging its delivery (email/ text attachment, mail or in person at the Court Front Counter window.)  
 	Incarcerated Defendants must have the form completed and delivered by a Jail Custodian. Walk-In Defendants complete the 
