--- a/arch/municourt/verifyJailCredit/index.html
+++ b/arch/municourt/verifyJailCredit/index.html
@@ -38,21 +38,21 @@
 
 <p><b>Scope: </b>Jail Credit Verifications requests can be initiated by defendants who are in custody (incarcerated) or by 
 	defendants not in custody (Walk-In). In either case they obtain a Jail Credit Verification form from the Court. Incarcerated 
-	Defendants may request the form via the Web and Walk-In Defendants can obtain the form over the Web or by contacting 
+	Defendants may request the form via the Web and Out of custody Defendants can obtain the form over the Web or by contacting 
 	the Court and arranging its delivery (email/ text attachment, mail or in person at the Court Front Counter window.)  
-	Incarcerated Defendants must have the form completed and delivered by a Jail Custodian. Walk-In Defendants complete the 
+	Incarcerated Defendants must have the form completed and delivered by a Jail Custodian. Out of custody Defendants complete the 
 	form themselves.
 	<br>&nbsp;<br>
-A Walk-In Defendant must also produce documented proof of their incarceration (dates and facility.) If the Walk-In Defendant served
+A Out of custody Defendant must also produce documented proof of their incarceration (dates and facility.) If the Out of custody Defendant served
 	time in Travis County then their incarceration dates can be verified by a TIBURON inquiry. If the Defendant presents proof of 
 	incarceration for time served in facility outside Travis County then the incarceration dates must be verified by contacting 
 	the facility. Receiving a completed form from a Jail Custodian via certified mail is adequate proof of incarceration.
 	<br>&nbsp;<br>
 The Court Clerk reviews the submitted form and confirms the method for determining the Defendants incarceration dates and (if everything 
-	is valid and complete) forwards the documents (and Walk-In Defendant when in person) to the Central Booking Clerk to continue 
+	is valid and complete) forwards the documents (and Out of custody Defendant when in person) to the Central Booking Clerk to continue 
 	the Jail Credit Verification process.
 	<br>&nbsp;<br>
-The Central Booking Clerk processes the Jail Credit Verification form by submitting the Defendants demographic information and 
+The Central Booking Clerk processes the Jail Credit Verification form by submitting the Defendant's demographic information and 
 	incarceration dates to either TIBURON for jail time served in Travis County or by contacting the jail facility outside Travis 
 	County.
 	<br>&nbsp;<br>
@@ -97,12 +97,12 @@ If the Defendant is not in custody:<br>&nbsp;<br>
 The Court Clerk, Customer (Defendant), or Jail Custodian requests the Jail Credit Verification form. The case management 
 system generates the form and delivers it to the requestor either as 
 <ul>
-<li>(If the Defendant is not a walk-in) a web form to be completed and submitted electronically</li>
-<li>(If the Defendant is not a walk-in) a form (file) attached to an email or text message to be printed, completed 
+<li>(If the Defendant is not an Out of custody Defendant) a web form to be completed and submitted electronically</li>
+<li>(If the Defendant is not an Out of custody Defendant) a form (file) attached to an email or text message to be printed, completed 
 and returned by mail or as a scanned file via email or text message</li>
-<li>(If the Defendant is not a walk-in) a paper form delivered by the mail to be completed and returned by mail or 
+<li>(If the Defendant is not an Out of custody Defendant) a paper form delivered by the mail to be completed and returned by mail or 
 as a scanned file via email or text message</li>
-<li>(If the Defendant is a walk-in) a paper form delivered to the Defendant (or requestor) at the Court lobby 
+<li>(If the Defendant is a Out of custody Defendant) a paper form delivered to the Defendant (or requestor) at the Court lobby 
 front counter to be completed and returned to the Court for processing</li>
 </ul>
 </td>
