--- a/arch/municourt/verifyJailCredit/index.html
+++ b/arch/municourt/verifyJailCredit/index.html
@@ -97,12 +97,12 @@ If the Defendant is not in custody:<br>&nbsp;<br>
 The Court Clerk, Customer (Defendant), or Jail Custodian requests the Jail Credit Verification form. The case management 
 system generates the form and delivers it to the requestor either as 
 <ul>
-<li>(If the Defendant is not an Out of custody Defendant) a web form to be completed and submitted electronically</li>
-<li>(If the Defendant is not an Out of custody Defendant) a form (file) attached to an email or text message to be printed, completed 
-and returned by mail or as a scanned file via email or text message</li>
-<li>(If the Defendant is not an Out of custody Defendant) a paper form delivered by the mail to be completed and returned by mail or 
-as a scanned file via email or text message</li>
-<li>(If the Defendant is a Out of custody Defendant) a paper form delivered to the Defendant (or requestor) at the Court lobby 
+<li>(If the Defendant is not a walk-in) a web form to be completed and submitted electronically. An Out of custody defendant may do this as well.</li>
+<li>(If the Defendant is not a walk-in) a form (file) attached to an email or text message to be printed, completed and returned by mail or as 
+a scanned file via email or text message An Out of custody defendant may do this as well.</li>
+<li>(If the Defendant is not a walk-in) a paper form delivered by the mail to be completed and returned by mail or as a scanned file via 
+email or text message An Out of custody defendant may do this as well.</li>
+<li>(If the Defendant is Out of custody) a paper form delivered to the Defendant (or requestor) at the Court lobby 
 front counter to be completed and returned to the Court for processing</li>
 </ul>
 </td>
