--- a/arch/municourt/verifyJailCredit/index.html
+++ b/arch/municourt/verifyJailCredit/index.html
@@ -99,9 +99,9 @@ system generates the form and delivers it to the requestor either as
 <ul>
 <li>(If the Defendant is not a walk-in) a web form to be completed and submitted electronically. An Out of custody defendant may do this as well.</li>
 <li>(If the Defendant is not a walk-in) a form (file) attached to an email or text message to be printed, completed and returned by mail or as 
-a scanned file via email or text message An Out of custody defendant may do this as well.</li>
+a scanned file via email or text message. An Out of custody defendant may do this as well.</li>
 <li>(If the Defendant is not a walk-in) a paper form delivered by the mail to be completed and returned by mail or as a scanned file via 
-email or text message An Out of custody defendant may do this as well.</li>
+email or text message. An Out of custody defendant may do this as well.</li>
 <li>(If the Defendant is Out of custody) a paper form delivered to the Defendant (or requestor) at the Court lobby 
 front counter to be completed and returned to the Court for processing</li>
 </ul>
