--- a/arch/ctm/master_index.html
+++ b/arch/ctm/master_index.html
@@ -57,7 +57,10 @@ image for larger view<br>
 <!-- sequence diagram  -->
 <td>
 <ul style="margin-left: 0px; padding-left: 20px;">
-<li style="font-size: 8pt;"><a href="http://coaspweb1.coacd.org/sites/CTM/EA/Shared%20Documents/Law/processingEmploymentDiscriminationCharge/default.html" target="usecase">Process Employment Discrimination Charge</a>
+ 
+ <li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/moveFileToFTPSite/default.html" target="usecase">Move File to FTP Site</a>
+</li> 
+<li style="font-size: 8pt;"><a href="https://cityofaustin.github.io/austinea/arch/ctm/provisionFTPSite/default.html" target="usecase">Provision FTP Site</a>
 </li>
 
 </ul>
